--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	    <img src="https://images.unsplash.com/photo-1491975474562-1f4e30bc9468?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8cmVzdW1lJTIwcGljfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt="pic" width="150px">
+    <h1>Aisha</h1>
+    <a href="https://www.linkedin.com/in/aisha-imtiyaz-4300281b2/">LinkedIn</a>
+<section id="skills">
+    <h5>skills:</h5>
+<ul>
+    <li>java</li>
+    <li>html</li>
+    <li>css</li>
+</ul>
+</section>
+
+<section id="project">
+    <h5>Projects</h5>
+    <ul>
+        <li>java</li>
+        <li>html</li>
+        <li>css</li>
+    </ul>
+</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
